--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -526,7 +526,7 @@ mpc_args=()
 # Example:
 # colors=(distro)      - Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
-colors=(4 1 3 2)
+colors=(7 14 14 15 14 7)
 
 
 # Text Options
