--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -85,30 +85,30 @@ tabspaces: 4
 font:
   # Normal (roman) font face
   normal:
-    family: monospace
+    family: mononoki Nerd Font
     # The `style` can be specified to pick a specific face.
     #style: Regular
 
   # Bold font face
   bold:
-    family: monospace
+    family: mononoki Nerd Font
     # The `style` can be specified to pick a specific face.
     #style: Bold
 
   # Italic font face
   italic:
-    family: monospace
+    family: mononoki Nerd Font
     # The `style` can be specified to pick a specific face.
     #style: Italic
 
   # Point size
-  size: 10.0
+  size: 11.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
   offset:
     x: 0
-    y: 0
+    y: 5 
 
   # Glyph offset determines the locations of the glyphs within their cells with
   # the default being at the bottom. Increasing `x` moves the glyph to the right,
