add more folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,29 @@
 # Ignore directories
-/Code - OSS/
-/Microsoft/
+Code - OSS/
+Microsoft/
 QtProject.conf
-/Thunar/
-/dconf/
-/deepin/
-/deluge/
-/discord/
-/dleyna-renderer-service.conf
-/evolution/
-/filezilla/
-/gedit/
-/google-chrome/
-/gtk-3.0/
-/kglobalshortcutsrc
-/kmixctrlrc
-/kmixrc
-/libreoffice/
-/mimeapps.list
-/pavucontrol.ini
-/pulse/
-/spotify/
-/teams/
-/vlc/
-/xfce4/
+Thunar/
+dconf/
+deepin/
+deluge/
+discord/
+dleyna-renderer-service.conf
+evolution/
+filezilla/
+gedit/
+google-chrome/
+gtk-3.0/
+kglobalshortcutsrc
+kmixctrlrc
+kmixrc
+libreoffice/
+mimeapps.list
+pavucontrol.ini
+pulse/
+spotify/
+teams/
+vlc/
+xfce4/
+configstore/
+Electron/
+aconfmgr/
