--- a/i3/config
+++ b/i3/config
@@ -53,7 +53,7 @@ bindsym $mod+Shift+q kill
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
-bindsym $mod+d exec "rofi -modi drun,run -show drun -theme Arc"
+bindsym $mod+d exec "rofi -modi drun,run -show drun -theme minimal"
 
 # change focus
 bindsym $mod+j focus left
@@ -191,7 +191,6 @@ exec_always picom --experimental-backends --backend glx --xrender-sync-fence
 
 # gaps
 gaps inner 20
-gaps bottom 30
 
 # border
 for_window [class=".*"] border pixel 1
@@ -205,3 +204,6 @@ exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 for_window [class="Thunderbird"] move to workspace $ws8
 for_window [class="discord"] move to workspace $ws9
 for_window [class="Spotify"] move to workspace $ws10
+
+# thunar daemon
+exec thunar --daemon
