--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -191,12 +191,12 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # blur-kern = ''
 blur-kern = "3x3box";
 
-blur:
-{
-   method = "gaussian";
-   size = 10;
-   deviation = 5.0;
-}
+# blur:
+#{
+#   method = "gaussian";
+#   size = 10;
+#   deviation = 5.0;
+#}
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
