--- a/polybar/config
+++ b/polybar/config
@@ -18,28 +18,29 @@
 
 [colors]
 ;background = ${xrdb:color0:#222}
-background = #f8f8ff
-background-alt = #3a335e
+background = #99303735
+background-alt = #99585d5f
 ;foreground = ${xrdb:color7:#222}
-foreground = #000000
-foreground-alt = #000000
-primary = #ffb52a
-secondary = #e60053
-alert = #bd2c40
+foreground = #f8f8ff
+foreground-alt = #efefef
+primary = #d692dd
+secondary = #807a44
+alert = #804444
 
-[bar/example]
+[bar/center]
 ;monitor = ${env:MONITOR:HDMI-1}
-width = 65%
+width = 100%
 height = 32
-offset-x = 17.5%
+offset-x = 0
 offset-y = 0
 radius = 0.0 
 bottom = true
 fixed-center = true
 
-override-redirect = true
+;override-redirect = true
 
-background = ${colors.background}
+;background = ${colors.background}
+background = #00ffffff
 foreground = ${colors.foreground}
 
 line-size = 3
@@ -58,13 +59,13 @@ font-0 = "Font Awesome 5 Free Solid:style=Solid:size=10;4"
 font-1 = mononoki Nerd Font:style=Bold:pixelsize=10;4
 font-2 = "Font Awesome 5 Free Regular:style=Regular:size=10;4"
 
-modules-left = bspwm i3
-modules-center = mpd 
-modules-right = date spotify eth root home pulseaudio switchaudio temperature  memory cpu powermenu 
+modules-left = spotify
+modules-center =  i3
+modules-right = date pulseaudio switchaudio powermenu 
 
 tray-position = right
 tray-padding = 4
-tray-background = #0c353f
+tray-background = ${colors.background-alt}
 
 ;wm-restack = bspwm
 ;wm-restack = i3
@@ -80,7 +81,6 @@ tray-background = #0c353f
 cursor-click = pointer
 cursor-scroll = ns-resize
 
-                             
 ; _____       _     _         
 ;|     |___ _| |_ _| |___ ___ 
 ;| | | | . | . | | | | -_|_ -|
@@ -121,19 +121,21 @@ wrapping-scroll = false
 ;pin-workspaces = true
 
 label-mode-padding = 1
-label-mode-foreground = #f8f8ff
-label-mode-background = #000000
+label-mode-foreground = ${colors.foreground}
+label-mode-background = ${colors.background}
 
 ; focused = Active workspace on focused monitor
 label-focused = %index%
-label-focused-foreground = #f8f8ff
-label-focused-background = #000000
+label-focused-foreground = ${colors.foreground}
+label-focused-background = ${colors.background}
 ;label-focused-underline= ${colors.primary}
 label-focused-padding = 2
 
 ; unfocused = Inactive workspace on any monitor
 label-unfocused = %index%
 label-unfocused-padding = 2
+label-unfocused-foreground = ${colors.foreground-alt}
+label-unfocused-background = ${colors.background-alt}
 
 ; visible = Active workspace on unfocused monitor
 label-visible = %index%
@@ -203,24 +205,22 @@ format-disconnected-padding = 1
 type = internal/date
 interval = 1
 
-date = "%A, %B %d, %Y"
-date-alt = " %Y-%m-%d"
+time ="  %l:%M:%S"
+time-alt = "  %A, %b %d"
 
-time = %H:%M:%S
-time-alt = %H:%M:%S
-
-format-prefix =" " 
+format-prefix ="" 
 format-prefix-foreground = ${colors.foreground}
 ;format-underline = #0a6cf5
 
-label = %date% %time%
+label = %time%
 
 format-padding = 1
+format-background = ${colors.background}
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume = <ramp-volume> <label-volume> <bar-volume>
+format-volume = <ramp-volume> <label-volume>
 label-volume =%percentage%%
 label-volume-foreground = ${root.foreground}
 
@@ -240,17 +240,19 @@ bar-volume-indicator = |
 bar-volume-indicator-font = 2
 bar-volume-fill = =
 bar-volume-fill-font = 2
-bar-volume-empty = ─
+bar-volume-empty = -
 bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground-alt}
+bar-volume-empty-foreground = ${colors.foreground}
 
 ramp-volume-0 =
 ramp-volume-1 = 
 ramp-volume-2 = 
 
 format-volume-padding = 1
-
+format-volume-background = ${colors.background}
 format-muted-padding = 1
+format-muted-background = ${colors.background-alt}
+
 
 [module/temperature]
 type = internal/temperature
@@ -286,6 +288,7 @@ menu-0-1 = power off
 menu-0-1-exec = systemctl reboot
 
 format-padding = 2
+format-background = ${colors.background}
 
 [module/switchaudio]
 type = custom/menu
@@ -307,6 +310,7 @@ menu-0-1 = headphones
 menu-0-1-exec = pacmd set-default-sink alsa_output.pci-0000_0c_00.4.analog-stereo
 
 format-padding = 2
+format-background = ${colors.background}
 
 [module/spotify]
 type = custom/script
@@ -315,7 +319,7 @@ format = <label>
 format-foreground = ${colors.foreqround}
 exec = python ~/.config/polybar/spotify_status.py -f '{song} - {artist}'
 
-format-background = #197758
+format-background = #99578044
 format-padding = 2
  
 [settings]
